# Stonechain

./: .env.example  .gitignore  Cargo.toml  README.md  start.sh  stone_init.py  sync_token.sh
deploy/: forge-nomad.service  nginx.conf  setup.sh  stone-master.service
src/: auth.rs  blockchain.rs  consensus.rs  crypto.rs  lib.rs  master_node.rs  network.rs  psk.rs  shard.rs  storage.rs  tls.rs  tunnel.rs
stone_data/: peers.json  tunnel.url
web/: blockchain.css  blockhain.html  stonechain.html
